# Map_Reduce

./: CMakeLists.txt  Map_reduce.h  README.md  main.cpp
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  map_reducer
build_windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  map_reducer.sln  map_reducer.vcxproj  map_reducer.vcxproj.filters  test.txt
build_windows/Debug/: map_reducer.ilk
build_windows/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build_windows/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build_windows/map_reducer.dir/Debug/map_reducer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
